--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
   <meta charset="UTF-8">
   <title>Krystian Kula</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+<section>
+  <h2>About</h2>
+  <p>
+    Geology student at the University of Aberdeen with interests in fieldwork,
+    data analysis, and practical problem-solving.
+  </p>
+</section>
 
+<section>
+  <h2>Education</h2>
+  <p><strong>University of Aberdeen</strong><br>
+     BSc Geology (expected 2026)</p>
+</section>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
