--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Krystian Kula</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <section>
   <h2>About</h2>
   <p>
@@ -18,10 +19,66 @@
   <p><strong>University of Aberdeen</strong><br>
      BSc Geology (expected 2026)</p>
 </section>
-    <link rel="stylesheet" href="style.css">
-<body>
-  <h1>Krystian Kula</h1>
-  <p>CV / portfolio</p>
-</body>
+
+<section>
+  <h2>Professional Experience</h2>
+
+  <p><strong>Tesco — Colleague & Baker</strong><br>
+  Feb 2024 – Present</p>
+  <ul>
+    <li>Delivered customer service with sensitivity and adaptability.</li>
+    <li>Resolved complaints clearly, managing expectations and outcomes.</li>
+    <li>Managed cash handling and staff deployment based on customer flow.</li>
+    <li>Improved inventory accuracy and reduced waste using data analysis.</li>
+  </ul>
+
+  <p><strong>POLBooks — Office Administrator</strong><br>
+  Sep 2020 – Dec 2023</p>
+  <ul>
+    <li>Maintained digital filing systems and administrative workflows.</li>
+    <li>Handled purchase orders, invoices, and scheduling.</li>
+    <li>Ensured calendars were conflict-free and operations ran smoothly.</li>
+  </ul>
+
+  <p><strong>S&amp;F International — Office Administrator</strong><br>
+  Summers 2018 – 2020</p>
+  <ul>
+    <li>Acted as first point of contact between customers and executives.</li>
+    <li>Streamlined workflows and contributed to a paperless office.</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Academic & Research Experience</h2>
+
+  <p><strong>William Whitehall Studentship Project — University of Aberdeen</strong><br>
+  Jul 2023 – Sep 2023</p>
+  <ul>
+    <li>Produced academic reports and original figures using GIS software.</li>
+    <li>Worked independently in unsupervised research settings.</li>
+    <li>Collaborated with researchers to implement new workflows.</li>
+  </ul>
+
+  <p><strong>QUADRAT Internship — University of Aberdeen</strong><br>
+  Jun 2022 – Jul 2022</p>
+  <ul>
+    <li>Conducted short-form research involving scientific photography.</li>
+    <li>Automated analysis of plant debris aspect ratios.</li>
+    <li>Worked safely with gases, furnaces, and laboratory equipment.</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Additional Experience</h2>
+
+  <p><strong>Self-Employed — Machine Operator</strong><br>
+  Summers 2019 – 2021</p>
+  <ul>
+    <li>Safely operated heavy machinery in challenging environments.</li>
+    <li>Delivered projects including tree planting, drainage, and levelling.</li>
+    <li>Worked with contractors to meet long-term project goals.</li>
+  </ul>
+</section>
+<link rel="stylesheet" href="style.css">
 </html>
 
