“meta” class test

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h2>Professional Experience</h2>
   
     <p><strong>Tesco — Colleague & Baker</strong><br>
-    Feb 2024 – Present</p>
+    <span class="meta">Feb 2024 – Present</span></p>
     <ul>
       <li>Delivered customer service with sensitivity and adaptability.</li>
       <li>Resolved complaints clearly, managing expectations and outcomes.</li>
