implemented the rest of my meta class using <span>

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </ul>
   
     <p><strong>POLBooks — Office Administrator</strong><br>
-    Sep 2020 – Dec 2023</p>
+    <span class="meta">Sep 2020 – Dec 2023</span></p>
     <ul>
       <li>Maintained digital filing systems and administrative workflows.</li>
       <li>Handled purchase orders, invoices, and scheduling.</li>
@@ -51,7 +51,7 @@
     </ul>
   
     <p><strong>S&amp;F International — Office Administrator</strong><br>
-    Summers 2018 – 2020</p>
+    <span class="meta">Summers 2018 – 2020</span></p>
     <ul>
       <li>Acted as first point of contact between customers and executives.</li>
       <li>Streamlined workflows and contributed to a paperless office.</li>
@@ -62,7 +62,7 @@
     <h2>Academic & Research Experience</h2>
   
     <p><strong>William Whitehall Studentship Project — University of Aberdeen</strong><br>
-    Jul 2023 – Sep 2023</p>
+    <span class="meta">Jul 2023 – Sep 2023</span></p>
     <ul>
       <li>Produced academic reports and original figures using GIS software.</li>
       <li>Worked independently in unsupervised research settings.</li>
@@ -70,7 +70,7 @@
     </ul>
   
     <p><strong>QUADRAT Internship — University of Aberdeen</strong><br>
-    Jun 2022 – Jul 2022</p>
+    <span class="meta">Jun 2022 – Jul 2022</span></p>
     <ul>
       <li>Conducted short-form research involving scientific photography.</li>
       <li>Automated analysis of plant debris aspect ratios.</li>
@@ -82,7 +82,7 @@
     <h2>Additional Experience</h2>
   
     <p><strong>Self-Employed — Machine Operator</strong><br>
-    Summers 2019 – 2021</p>
+    <span class="meta">Summers 2019 – 2021</span></p>
     <ul>
       <li>Safely operated heavy machinery in challenging environments.</li>
       <li>Delivered projects including tree planting, drainage, and levelling.</li>
