--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>Krystian Kula</h1>
-    <p class="subtitle">Geology graduate · Aberdeen</p>
+    <p class="subtitle">Geology graduate · Aberdeen, UK</p>
     <p class="links">
       <a href="cv.pdf" target="_blank">Download CV (PDF)</a>
     </p>
