--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <header>
     <h1>Krystian Kula</h1>
     <p class="subtitle">Geology graduate · Aberdeen, UK</p>
+    <p class="meta">Last updated: January 2026</p>
     <p class="links">
       <a href="cv.pdf" target="_blank">Download CV (PDF)</a>
     </p>
