--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <header>
     <h1>Krystian Kula</h1>
     <p class="subtitle">Geology graduate · Aberdeen, UK</p>
-    <p class="meta">Last updated: January 2026</p>
     <p class="links">
       <a href="cv.pdf" target="_blank">Download CV (PDF)</a>
     </p>
@@ -91,6 +90,10 @@
     </ul>
   </section>
   <link rel="stylesheet" href="style.css">
+    
+  <section>
+      <p class="meta">Last updated: January 2026</p>
+  </section>
 </body>
 </html>
 
